--- a/graphiql/package.json
+++ b/graphiql/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "graphiql": "^0.9.3",
+    "graphql": "^0.9.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
